import org.apache.tools.ant.filters.ReplaceTokens

plugins {
  id("java")
  id("java-test-fixtures")
  id("configure-jacoco")
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}

dependencies {
  compileOnly libs.jspecify
  compileOnly libs.lombok
  implementation libs.rlib.logger.api
  implementation libs.rlib.logger.slf4j
  implementation libs.springboot.starter.log4j2
  annotationProcessor libs.lombok
}

test {
  useJUnitPlatform()
  failOnNoDiscoveredTests = false
}

tasks.withType(Test).configureEach {
  maxParallelForks = 2
  forkEvery = 100
  jvmArgs += "--enable-preview"
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs.addAll([
      '--enable-preview',
      '-parameters'
  ])
}

processResources {
  filter(ReplaceTokens, tokens: [])
}
